--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,9 +16,9 @@ layout: default
    </center>
   </header>
 
-  <div class="post-content" itemprop="articleBody">
+  <main class="post-content tufter" itemprop="articleBody">
     {{ content }}
-  </div>
+  </main>
 
 
 </article>
