--- a/_includes/newsletter-signup.html
+++ b/_includes/newsletter-signup.html
@@ -6,11 +6,10 @@
   <form action="https://www.getrevue.co/profile/laidlaw/add_subscriber" method="post" id="revue-form" name="revue-form"  target="_blank">
     <!-- <div class="mdl-card__title">
       <h2 class="mdl-card__title-text">The Latest Bullshit, Right in you inbox</h2>
-    </div>
-    <div class="mdl-card__supporting-text">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Mauris sagittis pellentesque lacus eleifend lacinia... -->
-
+    </div>-->
+    <h2>
+      Learn how to turn any start up idea into <b>gold</b> by understanding the <b>elemental forces</b> behind business, technology, and design. No, I’m kidding.
+    </h2>
       <div class="mdl-grid">
         <div class="mdl-cell mdl-cell--4-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label revue-form-group">
           <label class="mdl-textfield__label" for="member_email">Email address*</label>
